--- a/app/views/subscriptions/_credit_card.html.erb
+++ b/app/views/subscriptions/_credit_card.html.erb
@@ -1,33 +1,30 @@
-<h2>Credit Card</h2>
-
 <% form_for :profile, :url => {:action => :store_credit_card} do |form| %>
 	<%= form.error_messages %>
 	<%= form.fields_for :credit_card, @profile.credit_card do |f| %>
-  <p>
+  <div class='field'>
     <%= f.label :first_name %><br />
     <%= f.text_field :first_name %>
-  </p>
-  <p>
+  </div>
+  <div class='field'>
     <%= f.label :last_name %><br />
     <%= f.text_field :last_name %>
-  </p>
-  <p>
+  </div>
+  <div class='field'>
     <%= f.label :type, 'Card type' %><br />
     <%= f.select :type, SubscriptionConfig.gateway.supported_cardtypes.collect {|c| [c.to_s.titleize, c.to_s]} %>
-  </p>
-  <p>
+  </div>
+  <div class='field'>
     <%= f.label :number, 'Card number' %><br />
     <%= f.text_field :number %>
-  </p>
-  <p>
+  </div>
+  <div class='field'>
     <%= f.label :verification_value, 'Card Verification Value (CVV)' %><br />
     <%= f.text_field :verification_value, :size => 4 %>
-  </p>
-  <p>
+  </div>
+  <div class='field'>
     <%= f.label :month, 'Card expires on:' %><br />
 		month: <%= f.select :month,  (1..12).map  { |i| "%02d" % i } %>
 		year: <%= f.select :year, (Date.today.year..(Date.today.year+10)) %>
-  </p>
+  </div>
 	<% end %>
-  <p><%= form.submit "Submit", :disable_with => "One moment please..." %></p>
 <% end %>
