--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -39,3 +39,24 @@ ul.actions li{
 #registration_links {
   margin-top: 10px;
 }
+
+div[aria-labelledby = 'ui-dialog-title-edit_profile_dialog'] .ui-dialog-titlebar {
+  display: none;
+}
+
+div[aria-labelledby = 'ui-dialog-title-edit_profile_dialog'] .ui-dialog-content, div[aria-labelledby = 'ui-dialog-title-edit_profile_dialog'] .ui-tabs {
+  padding:0;
+}
+
+#edit_profile_dialog .ui-tabs-nav .ui-state-active {
+  background: #EEE url(http://localhost:3000/stylesheets/ui-lightness/images/ui-bg_highlight-soft_100_eeeeee_1x100.png) repeat-x 20% 10%;
+
+}
+
+#ui-tab-dialog-close {
+  position:absolute; right:0; top:20px;
+}
+
+#ui-tab-dialog-close a {
+  float:none; padding:0;
+}
