--- a/app/views/shared/_edit_profile_dialog.html.erb
+++ b/app/views/shared/_edit_profile_dialog.html.erb
@@ -1,7 +1,7 @@
 <div id='edit_profile_dialog' style='display:none' title='<%= t('shared.edit_profile_dialog.title') %>'>
   <ul>
-    <li><a href="#info">User Info</a></li>
-    <li><a href="#subscription">Subscription</a></li>
+    <li><a href="#info"><%= t('shared.edit_profile_dialog.info_tab_title') %></a></li>
+    <li><a href="#subscription"><%= t('shared.edit_profile_dialog.subscription_tab_title') %></a></li>
     <li id="ui-tab-dialog-close"></li>
   </ul>
   <div id="info">
