--- a/app/views/subscriptions/_credit_card.html.erb
+++ b/app/views/subscriptions/_credit_card.html.erb
@@ -10,21 +10,21 @@
     <%= f.text_field :last_name %>
   </div>
   <div class='field'>
-    <%= f.label :type, 'Card type' %><br />
+    <%= f.label :type, t('activerecord.attributes.credit_card.type') %><br />
     <%= f.select :type, SubscriptionConfig.gateway.supported_cardtypes.collect {|c| [c.to_s.titleize, c.to_s]} %>
   </div>
   <div class='field'>
-    <%= f.label :number, 'Card number' %><br />
+    <%= f.label :number, t('activerecord.attributes.credit_card.number') %><br />
     <%= f.text_field :number %>
   </div>
   <div class='field'>
-    <%= f.label :verification_value, 'Card Verification Value (CVV)' %><br />
+    <%= f.label :verification_value, t('activerecord.attributes.credit_card.verification_value') %><br />
     <%= f.text_field :verification_value, :size => 4 %>
   </div>
   <div class='field'>
-    <%= f.label :month, 'Card expires on:' %><br />
-		month: <%= f.select :month,  (1..12).map  { |i| "%02d" % i } %>
-		year: <%= f.select :year, (Date.today.year..(Date.today.year+10)) %>
+    <%= f.label :month, t('activerecord.attributes.credit_card.expiration_date') %><br />
+    <%= t('credit_card.expiration_month') %>: <%= f.select :month,  (1..12).map  { |i| "%02d" % i } %>
+    <%= t('credit_card.expiration_year') %>: <%= f.select :year, (Date.today.year..(Date.today.year+10)) %>
   </div>
 	<% end %>
 <% end %>
