--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,7 +81,7 @@
           </p>
         </div>
       <% end %>
-      <% if user_signed_in? && current_user.subscription.days_remaining > 0 && current_user.subscription.days_remaining < 7 %>
+      <% if user_signed_in? && !current_user.subscription.free? && current_user.subscription.days_remaining > 0 && current_user.subscription.days_remaining < 7 %>
         <div class="notice ui-state-error ui-corner-all">
           <p>
             <span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
@@ -89,13 +89,13 @@
           </p>
         </div>
       <% end %>
-      <% if user_signed_in? && current_user.subscription.past_due? %>
+      <% if user_signed_in? && !current_user.subscription.free? && current_user.subscription.past_due? %>
         <div class="alert ui-state-error ui-corner-all">
           <p>
             <span class="ui-icon ui-icon-alert" style="float: left; margin-right: .3em;"></span>
             <%= t('application.account_past_due', :days => current_user.subscription.grace_days_remaining) %>
-
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+          </p>
+          <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
             <input type="hidden" name="cmd" value="_xclick">
             <input type="hidden" name="business" value="perichon@gmail.com">
             <input type="hidden" name="lc" value="AR">
@@ -106,8 +106,7 @@
             <input type="hidden" name="bn" value="PP-BuyNowBF:btn_paynowCC_LG.gif:NonHostedGuest">
             <input type="image" src="<%= t('application.pay_now_url') %>" border="0" name="submit">
             <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
-            </form>
-          </p>
+          </form>
         </div>
       <% end %>
 
