--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
   </head>
   <body>
     <div id='header' class='ui-widget-header ui-corner-all'>
-      <h1>S&aacute;dhana</h1>
+      <h1 id='logo'>S&aacute;dhana</h1>
 
       <div id='menu'>
         <% if user_signed_in? %>
