submit current balance on pay now button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -100,7 +100,7 @@
             <input type="hidden" name="business" value="perichon@gmail.com">
             <input type="hidden" name="lc" value="AR">
             <input type="hidden" name="item_name" value="Sadhana Monthly Fee">
-            <input type="hidden" name="amount" value="2.00">
+            <input type="hidden" name="amount" value="<%= current_user.subscription.balance.format(:symbol => nil) %>">
             <input type="hidden" name="currency_code" value="USD">
             <input type="hidden" name="button_subtype" value="services">
             <input type="hidden" name="bn" value="PP-BuyNowBF:btn_paynowCC_LG.gif:NonHostedGuest">
