--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,9 @@
   <head>
     <title>S&aacute;dhana</title>
 
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
     <%= stylesheet_link_tag 'ui-lightness/jquery-ui-1.8rc3.custom' %>
     <%= stylesheet_link_tag 'awesome' %>
     <%= stylesheet_link_tag 'application' %>
