--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,13 +1,14 @@
 #header {
   overflow: hidden;
+  height: 62px;
 }
 
 #logo {
   position: absolute;
-  background: transparent url("/images/logo_70.png") no-repeat;
+  background: transparent url("/images/logo_62.png") no-repeat;
   text-indent: -9999px;
   height: 62px;
-  width: 140px;
+  width: 200px;
   margin: 0;
 }
 
