hidden practice_id field on event dialog

--- a/app/views/practice_events/_fields.html.erb
+++ b/app/views/practice_events/_fields.html.erb
@@ -1,4 +1,4 @@
-<% if @practice_event.practice %>
+<% if @practice_event.new_record? && @practice_event.practice %>
   <%= f.hidden_field :practice_id %>
 <% else %>
   <div class="field">
