change label for event date

--- a/app/views/practice_events/_fields.html.erb
+++ b/app/views/practice_events/_fields.html.erb
@@ -8,7 +8,7 @@
   </div>
 <% end %>
 <div class="field">
-  <%= f.label :start_string %><% field_help t('practice_event.help.start') %>
+  <%= f.label :date %><% field_help t('practice_event.help.start') %>
   <br />
   <%= f.text_field :start_string %>
 </div>
