--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,51 +65,52 @@
     </div>
 
     <div id='content'>
-      <% if notice %>
-        <div class='notice ui-state-highlight ui-corner-all'>
-          <p>
-            <span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
-            <%= notice %>
-          </p>
-        </div>
-      <% end %>
-      <% if alert %>
-        <div class="alert ui-state-error ui-corner-all">
-          <p>
-            <span class="ui-icon ui-icon-alert" style="float: left; margin-right: .3em;"></span>
-            <%= alert %>
-          </p>
-        </div>
-      <% end %>
-      <% if user_signed_in? && !current_user.subscription.free? && current_user.subscription.days_remaining > 0 && current_user.subscription.days_remaining < 7 %>
-        <div class="notice ui-state-error ui-corner-all">
-          <p>
-            <span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
-            <%= t('application.account_due', :days => current_user.subscription.days_remaining) %>
-          </p>
-        </div>
-      <% end %>
-      <% if user_signed_in? && !current_user.subscription.free? && current_user.subscription.past_due? %>
-        <div class="alert ui-state-error ui-corner-all">
-          <p>
-            <span class="ui-icon ui-icon-alert" style="float: left; margin-right: .3em;"></span>
-            <%= t('application.account_past_due', :days => current_user.subscription.grace_days_remaining) %>
-          </p>
-          <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-            <input type="hidden" name="cmd" value="_xclick">
-            <input type="hidden" name="business" value="perichon@gmail.com">
-            <input type="hidden" name="lc" value="AR">
-            <input type="hidden" name="item_name" value="Sadhana Monthly Fee">
-            <input type="hidden" name="amount" value="<%= current_user.subscription.balance.format(:symbol => nil) %>">
-            <input type="hidden" name="currency_code" value="USD">
-            <input type="hidden" name="button_subtype" value="services">
-            <input type="hidden" name="bn" value="PP-BuyNowBF:btn_paynowCC_LG.gif:NonHostedGuest">
-            <input type="image" src="<%= t('application.pay_now_url') %>" border="0" name="submit">
-            <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
-          </form>
-        </div>
-      <% end %>
-
+      <div id='notifications'>
+        <% if notice %>
+          <div class='notice ui-state-highlight ui-corner-all'>
+            <p>
+              <span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
+              <%= notice %>
+            </p>
+          </div>
+        <% end %>
+        <% if alert %>
+          <div class="alert ui-state-error ui-corner-all">
+            <p>
+              <span class="ui-icon ui-icon-alert" style="float: left; margin-right: .3em;"></span>
+              <%= alert %>
+            </p>
+          </div>
+        <% end %>
+        <% if user_signed_in? && !current_user.subscription.free? && current_user.subscription.days_remaining > 0 && current_user.subscription.days_remaining < 7 %>
+          <div class="notice ui-state-error ui-corner-all">
+            <p>
+              <span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
+              <%= t('application.account_due', :days => current_user.subscription.days_remaining) %>
+            </p>
+          </div>
+        <% end %>
+        <% if user_signed_in? && !current_user.subscription.free? && current_user.subscription.past_due? %>
+          <div class="alert ui-state-error ui-corner-all">
+            <p>
+              <span class="ui-icon ui-icon-alert" style="float: left; margin-right: .3em;"></span>
+              <%= t('application.account_past_due', :days => current_user.subscription.grace_days_remaining) %>
+            </p>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+              <input type="hidden" name="cmd" value="_xclick">
+              <input type="hidden" name="business" value="perichon@gmail.com">
+              <input type="hidden" name="lc" value="AR">
+              <input type="hidden" name="item_name" value="Sadhana Monthly Fee">
+              <input type="hidden" name="amount" value="<%= current_user.subscription.balance.format(:symbol => nil) %>">
+              <input type="hidden" name="currency_code" value="USD">
+              <input type="hidden" name="button_subtype" value="services">
+              <input type="hidden" name="bn" value="PP-BuyNowBF:btn_paynowCC_LG.gif:NonHostedGuest">
+              <input type="image" src="<%= t('application.pay_now_url') %>" border="0" name="submit">
+              <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
+            </form>
+          </div>
+        <% end %>
+      </div>
       <%= yield %>
     </div>
 
