--- a/app/views/practices/play.html.erb
+++ b/app/views/practices/play.html.erb
@@ -1,4 +1,10 @@
-<div id="countdown"></div>
+<div id='controls'>
+  <%= link_to content_tag(:span, t('actions.previous'), :id => 'prev'), "#", :class => "small orange awesome" %>
+  <%= link_to_function t('actions.pause'), "$('#slideshow_practice_techniques').cycle('pause'); $('#countdown').countdown('pause');", :class => 'small orange awesome' %>
+  <div id="countdown"></div>
+  <%= link_to_function t('actions.resume'), "$('#slideshow_practice_techniques').cycle('resume'); $('#countdown').countdown('resume');", :class => 'small orange awesome' %>
+  <%= link_to content_tag(:span, t('actions.next'), :id => 'next'), "#" , :class => 'small orange awesome' %>
+</div>
 <div id='slideshow_practice_techniques' style='width: auto;'>
   <% @practice.practice_techniques.each do |practice_technique| %>
     <%= render :partial => 'play_practice_technique', :locals => {:practice_technique => practice_technique} %>
@@ -10,7 +16,10 @@
 
 
 <%= javascript_tag do %>
+  $('#countdown').countdown({until:"0:0", compact: true, description: ''});
   $('#slideshow_practice_techniques').cycle({
+    prev:    '#prev',
+    next:    '#next',
     delay: (parseInt($('#slideshow_practice_techniques .slideshow_practice_technique').first().attr('minutes'))*60 + parseInt($('#slideshow_practice_techniques .slideshow_practice_technique').first().attr('seconds')))*1000 - 2000,
     timeoutFn: function(current, next, options, fwd) {
       minutes = parseInt($(next).attr('minutes')) || 0
@@ -23,7 +32,7 @@
     after: function(currSlideElement, nextSlideElement, options, forwardFlag) {
       minutes = parseInt($(nextSlideElement).attr('minutes')) || 0
       seconds = parseInt($(nextSlideElement).attr('seconds')) || 1;
-      $('#countdown').counter({min:minutes, sec:seconds, onFinish: function() {$.sound.play('/ping.wav');}});
+      $('#countdown').countdown('change', {until: '+' + minutes + 'm +' + seconds + 's', format: 'MS', onExpiry: function() {$.sound.play('/ping.wav');}});
     },
     fit: 1,
     width: '99.9%'
