--- a/app/views/practices/_play_practice_technique.html.erb
+++ b/app/views/practices/_play_practice_technique.html.erb
@@ -2,7 +2,7 @@
 
 <div id='<%= dom_id practice_technique %>' class='slideshow_practice_technique' minutes=<%= practice_technique.minutes %> seconds=<%= practice_technique.seconds %>>
   <div id='main_panel'>
-    <%= image_tag practice_technique.technique.photo.url %>
+    <%= image_tag practice_technique.technique.photo.url(:original, false) %>
     <h2><%= practice_technique.technique.name %> <%= '(Comp)' if compensation%></h2>
   </div>
   <div id='info_panel'>
@@ -21,7 +21,7 @@
     <ul class='associated_techniques'>
       <% practice_technique.techniques.each do |associated_technique| %>
         <li class='associated_technique'>
-          <%= image_tag associated_technique.photo.url(:thumb) %>
+          <%= image_tag associated_technique.photo.url(:thumb, false) %>
           <h4><%= associated_technique.name %></h4>
         </li>
       <% end %>
