--- a/app/views/practices/play.html.erb
+++ b/app/views/practices/play.html.erb
@@ -1,9 +1,15 @@
 <div id='controls'>
-  <%= link_to content_tag(:span, t('actions.previous'), :id => 'prev'), "#", :class => "small orange awesome" %>
-  <%= link_to_function t('actions.pause'), "$('#slideshow_practice_techniques').cycle('pause'); $('#countdown').countdown('pause');", :class => 'small orange awesome' %>
-  <div id="countdown"></div>
-  <%= link_to_function t('actions.play'), "$('#slideshow_practice_techniques').cycle('resume'); $('#countdown').countdown('resume');", :class => 'small orange awesome' %>
-  <%= link_to content_tag(:span, t('actions.next'), :id => 'next'), "#" , :class => 'small orange awesome' %>
+  <div id="main_controls">
+    <%= link_to t('actions.edit'), practice_path(@practice), :class => 'medium blue awesome' %>
+    <%= link_to_function t('actions.config'), "#", :class => 'medium blue awesome' %>
+  </div>
+  <div id="play_controls">
+    <%= link_to content_tag(:span, t('actions.previous'), :id => 'prev'), "#", :class => "small orange awesome" %>
+    <%= link_to_function t('actions.pause'), "$('#slideshow_practice_techniques').cycle('pause'); $('#countdown').countdown('pause');", :class => 'small orange awesome' %>
+    <div id="countdown"></div>
+    <%= link_to_function t('actions.play'), "$('#slideshow_practice_techniques').cycle('resume'); $('#countdown').countdown('resume');", :class => 'small orange awesome' %>
+    <%= link_to content_tag(:span, t('actions.next'), :id => 'next'), "#" , :class => 'small orange awesome' %>
+  </div>
 </div>
 <div id='slideshow_practice_techniques' style='width: auto;'>
   <% @practice.practice_techniques.each do |practice_technique| %>
@@ -14,8 +20,10 @@
   <% end %>
 </div>
 
+<div id='play_config_dialog' style="display:none"></div>
 
 <%= javascript_tag do %>
+  
   $('#countdown').countdown({until:"0:0", compact: true, description: '', onExpiry: function() {$.sound.play('/ping.wav');$('#slideshow_practice_techniques').cycle('next');}});
   $('#slideshow_practice_techniques').cycle({
     prev:    '#prev',
